--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -2,33 +2,65 @@
 {% load staticfiles %}
 
 <!doctype html>
-<html class="no-js" lang="en">
-<head>
-  <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Share Workplace</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Responsive Photography HTML5 Website Template">
+    <meta name="keywords" content="HTML5, CSS3, Bootsrtrap, Responsive, Photography, Portfolio, Template, Theme, Website, Themetorium" />
+    <meta name="author" content="themetorium.net">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/animsition.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/fontawesome-all.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/lightgallery.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/owl.carousel.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/owl.theme.default.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/jquery.mb.YTPlayer.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/animate.min.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/helper.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/theme.css" %}">
+    <link rel="stylesheet" href="{% static "assets/vendor/css/dark-style.css" %}">
+  </head>
+<body id="body" class="animsition tt-boxed">
+  <header id="header" class="header-show-hide-on-scroll menu-align-right">
+    <div class="header-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
+      <div id="logo">
+        <a href="index.html" class="logo-dark"><img src="{% static "assets/img/logo-dark.png" %}" alt="logo"></a>
+        <a href="index.html" class="logo-light"><img src="{% static "assets/img/logo-light.png" %}" alt="logo"></a>
+        <a href="index.html" class="logo-dark-m"><img src="{% static "assets/img/logo-dark-m.png" %}" alt="logo"></a>
+        <a href="index.html" class="logo-light-m"><img src="{% static "assets/img/logo-light-m.png" %}" alt="logo"></a>
+      </div>
+      <nav class="tt-main-menu">
+        <div id="tt-m-menu-toggle-btn">
+          <span></span>
+        </div>
+        <div class="tt-menu-tools">
+          <ul>
+            <li>
+              <a href="#" class="tt-tools-button" target="_blank">Entrar</a>
+            </li>
+          </ul>
+        </div>
+        <div class="tt-menu-collapse tt-submenu-dark">
+          <ul class="tt-menu-nav">
+            <li class="tt-submenu-wrap tt-submenu-master">
+              <a href="#0">Início</a>
+            </li>
+            <li class="tt-submenu-wrap tt-submenu-master">
+              <a href="#0">Empresas</a>
+            </li>
+          </ul>
+        </div>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>{% block page_title %}{{ _("Your Site") }}{% endblock %}</title>
-  <meta name="description" content="{% block meta_description %}{% endblock %}">
-  <meta name="author" content="{% block meta_author %}{% endblock %}">
-  <meta name="viewport" content="width=device-width">
-
-  {% block meta %}
-  {% endblock %}
-
-  {% block cdn_css %}
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-  {% endblock cdn_css %}
-
-  {% compress css %}
-  <link rel="stylesheet" href="{% static 'css/app.css' %}">
-  {% block css %}{% endblock %}
-  {% endcompress %}
-  {% compress js %}
-  <script src="{% static 'js/libs/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
-  {% endcompress %}
-</head>
-<body class="{% block body_class %}{% endblock %}" {% block body_attributes %}{% endblock %}>
+      </nav>
+    </div>
+  </header>
 {% block body %}
   <header>
     {% block header %}{% endblock %}
@@ -44,11 +76,18 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
   {% endblock cdn_js %}
 
-  {% compress js %}
-    {% block js %}
-    <script src="{% static 'js/main.js' %}"></script>
-    {% endblock js %}
-  {% endcompress %}
+  <script src="{% static "assets/vendor/js/jquery.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/bootstrap.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/animsition.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/jquery.easing.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/isotope.pkgd.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/imagesloaded.pkgd.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/owl.carousel.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/jquery.mousewheel.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/jquery.mb.YTPlayer.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/lightgallery.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/lightgallery-all.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js/theme.js" %}"></script>
 {% endblock %}
 </body>
 </html>
