enterprise list initial template

--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -50,10 +50,10 @@
         <div class="tt-menu-collapse tt-submenu-dark">
           <ul class="tt-menu-nav">
             <li class="tt-submenu-wrap tt-submenu-master">
-              <a href="#0">Início</a>
+              <a href="{% url 'home' %}">Início</a>
             </li>
             <li class="tt-submenu-wrap tt-submenu-master">
-              <a href="#0">Empresas</a>
+              <a href="{% url 'enterprise_list' %}">Empresas</a>
             </li>
           </ul>
         </div>
