--- a/base/templates/base/enterprise_list.html
+++ b/base/templates/base/enterprise_list.html
@@ -19,4 +19,30 @@
     <section id="gallery-list-section">
     </section>
   </div>
+  <section id="gallery-list-section" class="gl-categories">
+      <div class="isotope-wrap tt-wrap">
+        <div class="isotope col-3 gutter-3">
+          <div class="isotope-items-wrap gli-colored gli-alter-5">
+            <div class="grid-sizer"></div>
+            {% for i in "xxxxxx" %}
+              <div class="isotope-item outdoor iso-height-1">
+              <div class="gallery-list-item">
+                <div class="gl-item-image-wrap">
+                  <a href="albums-archive.html" class="gl-item-image-inner">
+                    <div class="gl-item-image bg-image" style="background-image: url(https://pbs.twimg.com/media/DccpoB3W4AEv9mT.jpg:large); background-position: 50% 50%"></div>
+                    <span class="gl-item-image-zoom"></span>
+                  </a>
+                </div>
+                <div class="gl-item-info">
+                  <div class="gl-item-caption">
+                    <h2 class="gl-item-title"><a href="albums-archive.html">Quero Educação</a></h2>
+                  </div>
+                </div>
+              </div>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+  </section>
 {% endblock content %}
