showing enterprises from database

--- a/base/templates/base/enterprise_list.html
+++ b/base/templates/base/enterprise_list.html
@@ -25,21 +25,23 @@
           <div class="isotope-items-wrap gli-colored gli-alter-5">
             <div class="grid-sizer"></div>
             {% for i in "xxxxxx" %}
-              <div class="isotope-item outdoor iso-height-1">
-              <div class="gallery-list-item">
-                <div class="gl-item-image-wrap">
-                  <a href="albums-archive.html" class="gl-item-image-inner">
-                    <div class="gl-item-image bg-image" style="background-image: url(https://pbs.twimg.com/media/DccpoB3W4AEv9mT.jpg:large); background-position: 50% 50%"></div>
-                    <span class="gl-item-image-zoom"></span>
-                  </a>
-                </div>
-                <div class="gl-item-info">
-                  <div class="gl-item-caption">
-                    <h2 class="gl-item-title"><a href="albums-archive.html">Quero Educação</a></h2>
+              {% for enterprise in enterprises %}
+                <div class="isotope-item outdoor iso-height-1">
+                  <div class="gallery-list-item">
+                    <div class="gl-item-image-wrap">
+                      <a href="albums-archive.html" class="gl-item-image-inner">
+                        <div class="gl-item-image bg-image" style="background-image: url({{ enterprise.main_photo.url }}); background-position: 50% 50%"></div>
+                        <span class="gl-item-image-zoom"></span>
+                      </a>
+                    </div>
+                    <div class="gl-item-info">
+                      <div class="gl-item-caption">
+                        <h2 class="gl-item-title"><a href="albums-archive.html">{{ enterprise.name }}</a></h2>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-              </div>
+              {% endfor %}
             {% endfor %}
           </div>
         </div>
