start channel integration + django standalone example

--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -87,6 +87,7 @@
   <script src="{% static "assets/vendor/js/lightgallery.min.js" %}"></script>
   <script src="{% static "assets/vendor/js/lightgallery-all.min.js" %}"></script>
   <script src="{% static "assets/vendor/js/theme.js" %}"></script>
+  {% block js %}{% endblock js %}
 {% endblock %}
 </body>
 </html>
