--- a/base/templates/base/enterprise_details.html
+++ b/base/templates/base/enterprise_details.html
@@ -577,3 +577,24 @@
     </section>
   </div>
 {% endblock content %}
+
+{% block js %}
+  <script>
+    var roomName = "{{ enterprise.slug }}";
+    var chatSocket = new WebSocket(
+        'ws://' + window.location.host +
+        '/ws/empresas/obs/' + roomName + '/');
+
+    chatSocket.onmessage = function(e) {
+        var data = JSON.parse(e.data);
+        var message = data['message'];
+        console.log('data:::', data);
+        console.log('message:::', message);
+        // document.querySelector('#chat-log').value += (message + '\n');
+    };
+
+    chatSocket.onclose = function(e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+  </script>
+{% endblock js %}
