--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="{% static "assets/vendor/css/theme.css" %}">
     <link rel="stylesheet" href="{% static "assets/vendor/css/dark-style.css" %}">
   </head>
-<body id="body" class="animsition tt-boxed">
+<body id="body" class="animsition tt-boxed tt-dark-style">
   <header id="header" class="header-show-hide-on-scroll menu-align-right">
     <div class="header-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
       <div id="logo">
@@ -54,6 +54,9 @@
             </li>
             <li class="tt-submenu-wrap tt-submenu-master">
               <a href="{% url 'enterprise_list' %}">Empresas</a>
+            </li>
+            <li class="tt-submenu-wrap tt-submenu-master">
+              <a href="#" class="js-light-switcher">Trocar Cor</a>
             </li>
           </ul>
         </div>
