--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -26,15 +26,13 @@
     <link rel="stylesheet" href="{% static "assets/vendor/css/helper.css" %}">
     <link rel="stylesheet" href="{% static "assets/vendor/css/theme.css" %}">
     <link rel="stylesheet" href="{% static "assets/vendor/css/dark-style.css" %}">
+    <link rel="stylesheet" href="{% static "css/app.css" %}">
   </head>
 <body id="body" class="animsition tt-boxed tt-dark-style">
   <header id="header" class="header-show-hide-on-scroll menu-align-right">
     <div class="header-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
       <div id="logo">
-        <a href="{% url 'home' %}" class="logo-dark"><img src="{% static "assets/img/logo-dark.png" %}" alt="logo"></a>
-        <a href="{% url 'home' %}" class="logo-light"><img src="{% static "assets/img/logo-light.png" %}" alt="logo"></a>
-        <a href="{% url 'home' %}" class="logo-dark-m"><img src="{% static "assets/img/logo-dark-m.png" %}" alt="logo"></a>
-        <a href="{% url 'home' %}" class="logo-light-m"><img src="{% static "assets/img/logo-light-m.png" %}" alt="logo"></a>
+        <a href="{% url 'home' %}" class="header-logo">NOME MANEIRO AQUI</a>
       </div>
       <nav class="tt-main-menu">
         <div id="tt-m-menu-toggle-btn">
