--- a/base/templates/base/enterprise_details.html
+++ b/base/templates/base/enterprise_details.html
@@ -43,8 +43,8 @@
           <hr class="hr-short">
 
           <!-- Use data attributes to set text maximum characters or words (example: data-max-characters="120" or data-max-words="40") -->
-          <div class="page-header-description" data-max-words="40">
-            <p>Acompanhe o dia a dia mostrada pelos funcionários.</p>
+          <div class="page-header-description" data-max-words="80">
+            <p>{{ enterprise.description }}</p>
           </div>
 
         </div>
