--- a/base/static/css/app.css
+++ b/base/static/css/app.css
@@ -24,4 +24,18 @@
 .text-box {
   background-color: #08c1b8;
   padding: 15px;
+  overflow: hidden;
+}
+
+.gli-alter-4 .gl-item-title {
+  font-size: 16px;
+  max-height: 100%;
+}
+
+.gl-item-info {
+  max-height: 100%
+}
+
+.gallery-list-item {
+  overflow: hidden;
 }
