random color on text posts

--- a/base/templates/base/enterprise_details.html
+++ b/base/templates/base/enterprise_details.html
@@ -92,12 +92,11 @@
                       </div>
                     </div>
                   {% else %}
-                    <div class="text-box">
+                    <div class="text-box" style="background-color: {{ post.random_color }}">
                       <h2 class="gl-item-title"><a href="gallery-single-grid.html">{{ post.text }}</a></h2>
                       <span class="gl-item-category"><a href="albums-archive.html">{{ post.user_display_name }}</a></span>
                     </div>
                   {% endif %}
-
                 </div>
               </div>
             {% endfor %}
