--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -32,7 +32,7 @@
   <header id="header" class="header-show-hide-on-scroll menu-align-right">
     <div class="header-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
       <div id="logo">
-        <a href="{% url 'home' %}" class="header-logo">work<span class="header-logo--secondary">days</span></a>
+        <a href="{% url 'home' %}" class="header-logo">startup<span class="header-logo--secondary">life</span></a>
       </div>
       <nav class="tt-main-menu">
         <div id="tt-m-menu-toggle-btn">
