--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="{% static "css/app.css" %}">
   </head>
 <body id="body" class="animsition tt-boxed tt-dark-style">
+  {% if not embedded %}
   <header id="header" class="header-show-hide-on-scroll menu-align-right">
     <div class="header-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
       <div id="logo">
@@ -56,7 +57,8 @@
       </nav>
     </div>
   </header>
-{% block body %}
+  {% endif %}
+  {% block body %}
   <header>
     {% block header %}{% endblock %}
   </header>
